fix: home page spacing

--- a/packages/xm_dkfz_net_prototype/source/_patterns/components/content-wrapper/content-wrapper.scss
+++ b/packages/xm_dkfz_net_prototype/source/_patterns/components/content-wrapper/content-wrapper.scss
@@ -252,6 +252,8 @@
 
     .background--image + & {
         box-shadow: 0 var(--space-xxl) 0 var(--space-xxl) var(--color-white);
+        margin-top: 0;
+        padding-top: var(--space-xxl);
     }
 
     &.frame-type-container-accordion {
